--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
     <main>
         <section>
             <nav>
-                <a href="index.html">Intro</a>
-                <a href="about.html">About Us</a> 
-                <a href="products.html">Coffee Products</a> 
-                <a href="contact.html">Contact Us</a>
+                <ul>
+                    <li><a href="index.html">Intro</a></li>
+                    <li><a href="about.html">About Us</a></li> 
+                    <li><a href="products.html">Coffee Products</a></li> 
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>
             </nav>
             <h2>Our Company Mission</h2>
             <p>At Coffee Co., our workers dedicate to serving customers our freshly ground coffee beans, all over the world.</p>
