Modified main.css and index.html to include more content and change colors of the backgrounds, while creating a multiple column layout with a footer.

--- a/index.html
+++ b/index.html
@@ -10,19 +10,27 @@
     <header>
         <h1>Coffee Co.</h1>
     </header>
-    <main>
         <section>
             <nav>
                 <ul>
                     <li><a href="index.html">Intro</a></li>
                     <li><a href="about.html">About Us</a></li> 
                     <li><a href="products.html">Coffee Products</a></li> 
-                    <li><a href="contact.html">Contact Us</a></li>
+                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </nav>
-            <h2>Our Company Mission</h2>
-            <p>At Coffee Co., our workers dedicate to serving customers our freshly ground coffee beans, all over the world.</p>
+            <main>
+                <h2>Our Company Mission</h2>
+                <p>At Coffee Co., our workers dedicate to serving customers our freshly ground coffee beans, all over the world.</p>
+                <p>Vivamus sit amet tortor auctor, maximus dolor non, maximus dolor. Quisque sagittis faucibus tempus. Nulla vitae tellus placerat, molestie dui a, vestibulum tortor. Duis et posuere nisi, vitae porttitor sem. Cras convallis lorem vitae arcu aliquet, ultrices efficitur neque volutpat. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras blandit eleifend eleifend. Nunc sed lacus nulla. Sed aliquam, elit eu bibendum volutpat, lorem purus pulvinar lorem, consequat rhoncus lacus tortor vitae lacus. Vivamus pharetra lacus tempus tristique dignissim. Aenean in rhoncus eros, vel ultricies nunc.</p>
+            </main>
+            <aside>
+                <h2>Lorem Ipsum</h2>
+                <p>Etiam commodo felis nec mauris porta bibendum. Donec tempor arcu sed massa malesuada, sit amet venenatis tellus posuere. Quisque egestas tempus magna, vel imperdiet ipsum hendrerit in. Donec non porttitor leo. Nunc porta non lorem id aliquam. Suspendisse gravida eros eros, quis euismod arcu maximus vitae. Fusce eu pulvinar urna. Nam eu sollicitudin magna. Nullam ac enim sed odio lacinia dapibus. Nullam sit amet lacus erat. Nunc nec luctus nisi. Aliquam ut nisi in nisi iaculis ornare.</p>
+            </aside>
         </section>
-    </main>
+    <footer>
+        <p>&copy; Copyright Coffee Co. 2025</p>
+    </footer>
 </body>
 </html>
